# BEMUse

./: .gitignore  BEMUse.pro  CMakeLists.txt  README.md  README.md.bak  main.cpp
src/: BEMUse_IO.h  BEMUse_Inquiry.h  BEMUse_Math_Types.h  BEMUse_Test.h  BEMUser_Console.cpp  BEMUser_Console.h  CMakeLists.txt  Kernels.cpp
src/Boundary/: Airfoil_Profiles.h  Barge.cpp  Barge.h  Boundary_Base.cpp  Boundary_Base.h  Ellipsoid.cpp  Ellipsoid.h  FOWT_Platforms.h  GDF_Geo.cpp  GDF_Geo.h  Half_Volume_of_Revolution.cpp  Half_Volume_of_Revolution.h  Hoizontal_Volume_of_Revolution.cpp  Horizontal_Volume_of_Revolution.h  MAR_Geo.cpp  MAR_Geo.h  Numerical_Wave_Tank.cpp  Numerical_Wave_Tank.h  PNL_Geo.cpp  PNL_Geo.h  STL_Geo.cpp  STL_Geo.h  Ship_Hulls.cpp  Ship_Hulls.h  Thin_Disc.cpp  Thin_Disc.h  Triple_Spar.cpp  Triple_Spar.h  Volume_of_Revolution.cpp  Volume_of_Revolution.h  Wing.cpp  Wing.h
src/Geometry/: CoordSys.h  Geo_Elements.cpp  Geo_Elements.h  Node.h  Panel.cpp  Panel.h  Quadrule.cpp  Quadrule.hpp
src/Solver/: Aerodynamic_Solver.cpp  Aerodynamic_Solver.h  Hydrodynamic_Solver.cpp  Hydrodynamic_Solver.h  Hydrodynamic_Solver_IO.cpp  Solver_Base.cpp  Solver_Base.h  Surface.cpp  Surface.h
src_gui/: BEMUser_Interface.cpp  BEMUser_Interface.h  CMakeLists.txt  Grid_Options.cpp  Grid_Options.h  Solver_Setup.cpp  Solver_Setup.h  Visualise.h  bemuser_interface.ui  grid_options.ui  solver_setup.ui
